--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~ Copyright (C) 2017-2018  Dominic Joas
   ~
   ~ This program is free software; you can redistribute it and/or
@@ -250,11 +251,23 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="de.domjos.schooltools.activities.MainActivity" />
         </activity>
+        <activity
+            android:name=".activities.DescriptionActivity"
+            android:label="@string/sys_description"
+            android:parentActivityName=".activities.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            tools:targetApi="jelly_bean">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="de.domjos.schooltools.activities.MainActivity" />
+        </activity>
         <activity android:name=".widgets.TimeTableWidgetConfigurationActivity">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
             </intent-filter>
         </activity>
+
+
 
         <provider
             android:name=".helper.SchoolToolsFileProvider"
@@ -313,15 +326,7 @@
             android:name=".services.MemoryService"
             android:exported="false" />
 
-        <activity
-            android:name=".activities.DescriptionActivity"
-            android:label="@string/sys_description"
-            android:parentActivityName=".activities.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="de.domjos.schooltools.activities.MainActivity" />
-        </activity>
+
     </application>
 
 </manifest>
