--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2017-2018  Dominic Joas
- *
+ *  
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
  * as published by the Free Software Foundation; either version 3
@@ -23,18 +23,23 @@ buildscript {
 apply plugin: 'com.android.application'
 
 // create variables
-def andVersion = '27.1.1'
-def appPhase = 'beta'
-def appVersion = '0.1'
+int sdkVersion = 28
+def andVersion = '28.0.0'
+
+def espressoVersion = '2.2.2'
+def testRulesVersion = '0.5'
+
+def appPhase = 'alpha'
+def appVersion = '0.2'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     buildToolsVersion "28.0.3"
     defaultConfig {
         applicationId "de.domjos.schooltools"
         minSdkVersion 15
-        targetSdkVersion 27
-        versionCode 5
+        targetSdkVersion "${sdkVersion}"
+        versionCode 6
         versionName "${appVersion}"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
@@ -43,6 +48,7 @@ android {
     lintOptions {
         checkReleaseBuilds false
         abortOnError false
+        return void
     }
 
     buildTypes {
@@ -76,42 +82,51 @@ android {
 }
 
 dependencies {
+    // libraries in  local system
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support:support-vector-drawable:27.1.1'
-    androidTestImplementation('com.android.support.test:runner:0.5') {
+
+    // android libraries
+    implementation "com.android.support:design:${andVersion}"
+    implementation "com.android.support:support-vector-drawable:${andVersion}"
+    implementation "com.android.support:appcompat-v7:${andVersion}"
+    implementation "com.android.support:design:${andVersion}"
+    implementation "com.android.support:support-v4:${andVersion}"
+    implementation "com.android.support:support-vector-drawable:${andVersion}"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+    // library to select file in android filesystem
+    implementation 'com.github.angads25:filepicker:1.1.1'
+    // library to create a pdf
+    implementation 'com.itextpdf:itextg:5.5.10'
+    // library to show graphs
+    implementation 'com.jjoe64:graphview:4.2.2'
+
+    // Log4J-Logging for Android
+    implementation 'log4j:log4j:1.2.17'
+    implementation 'de.mindpipe.android:android-logging-log4j:1.0.3'
+
+    // Testing
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation("com.android.support.test.espresso:espresso-core:${espressoVersion}") {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
-    androidTestImplementation('com.android.support.test:rules:0.5') {
+    androidTestImplementation("com.android.support.test.espresso:espresso-intents:${espressoVersion}") {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2') {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    }
-    androidTestImplementation('com.android.support.test.espresso:espresso-intents:2.2.2') {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    }
-    androidTestImplementation('com.android.support.test.espresso:espresso-contrib:2.2.2') {
+    androidTestImplementation("com.android.support.test.espresso:espresso-contrib:${espressoVersion}") {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.android.support', module: 'support-v4'
         exclude group: 'com.android.support', module: 'recyclerview-v7'
         exclude group: 'com.android.support', module: 'appcompat-v7'
         exclude group: 'com.android.support', module: 'design'
     }
-    implementation "com.android.support:appcompat-v7:${andVersion}"
-    implementation "com.android.support:design:${andVersion}"
-    implementation "com.android.support:support-v4:${andVersion}"
-    implementation "com.android.support:support-vector-drawable:${andVersion}"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    // Libraries to create files and draw diagrams
-    implementation 'com.github.angads25:filepicker:1.1.1'
-    implementation 'com.itextpdf:itextg:5.5.10'
-    implementation 'com.jjoe64:graphview:4.2.2'
-    // Log4J-Logging for Android
-    implementation 'log4j:log4j:1.2.17'
-    implementation 'de.mindpipe.android:android-logging-log4j:1.0.3'
-    // Testing
-    testImplementation 'junit:junit:4.12'
+
+    androidTestImplementation("com.android.support.test:runner:${testRulesVersion}") {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
+    androidTestImplementation("com.android.support.test:rules:${testRulesVersion}") {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
 }
 
 repositories {
