--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             android:theme="@style/AppTheme">
         <activity
                 android:name=".activities.MainActivity"
-                android:configChanges="orientation"
+                android:configChanges="orientation|keyboardHidden"
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
