--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation "com.android.support:support-v4:${andVersion}"
     implementation "com.android.support:support-vector-drawable:${andVersion}"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation "com.android.support:customtabs:${andVersion}"
 
     // library to select file in android filesystem
     implementation 'com.github.angads25:filepicker:1.1.1'
@@ -70,12 +71,15 @@ dependencies {
     implementation 'com.itextpdf:itextg:5.5.10'
     // library to show graphs
     implementation 'com.jjoe64:graphview:4.2.2'
+    implementation 'com.hudomju:swipe-to-dismiss-undo:1.0'
 
     // Log4J-Logging for Android
     implementation 'log4j:log4j:1.2.17'
     implementation 'de.mindpipe.android:android-logging-log4j:1.0.3'
 
     // Testing
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:support-vector-drawable:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation("com.android.support.test.espresso:espresso-core:${espressoVersion}") {
         exclude group: 'com.android.support', module: 'support-annotations'
