--- a/build.gradle
+++ b/build.gradle
@@ -42,12 +42,17 @@ android {
         versionName "${appVersion}"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+
     }
 
     lintOptions {
         checkReleaseBuilds false
         abortOnError false
         return void
+    }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
     }
 }
 
@@ -72,6 +77,7 @@ dependencies {
     // library to show graphs
     implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'com.hudomju:swipe-to-dismiss-undo:1.0'
+    implementation 'com.github.lookfirst:sardine:5.8'
 
     // Log4J-Logging for Android
     implementation 'log4j:log4j:1.2.17'
