--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         </activity>
         <activity
             android:name=".activities.MainActivity"
-            android:configChanges="orientation|keyboardHidden"
+            android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
