--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -308,6 +308,17 @@
         </provider>
 
         <receiver
+            android:name=".widgets.LearningCardWidget"
+            android:label="@string/learningCard_query">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/learning_card_widget_info" />
+        </receiver>
+        <receiver
             android:name=".widgets.TimeTableWidget"
             android:label="@string/main_nav_timetable">
             <intent-filter>
@@ -366,7 +377,7 @@
             android:exported="false" />
         <service
             android:name=".services.BookmarkWidgetService"
-            android:permission="android.permission.BIND_REMOTEVIEWS"/>
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
         <service
             android:name=".services.AuthenticatorService"
             android:exported="false">
