--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,5 @@
-include ':app', ':schooltoolslib', ':customwidgets'
+include ':app'
+include ':schooltoolslib'
+include ':customwidgets'
+
+project(':customwidgets').projectDir = new File(rootDir, '../Libraries/customwidgets')
