--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
+        
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
 }
 
@@ -52,3 +55,50 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
+task customZip(type: Zip) {
+    clean
+    from '.'
+    include 'build.gradle'
+    include '.gitignore'
+    include 'LICENSE'
+    include 'README.md'
+    include '*.java'
+    include 'data/**'
+    include 'app/**'
+    include 'unitrackerlibrary/**'
+    include 'customwidgets/**'
+    include 'gradle.properties'
+
+    exclude 'unitrackerlibrary/build'
+    exclude 'app/build'
+    exclude 'customwidgets/build'
+    archiveFileName = rootProject.name + '.zip'
+    destinationDirectory = file(rootProject.rootDir)
+}
+
+task archiveReleases(type: Copy) {
+    def appPath = projectDir.toString() + "/app"
+    def releasePath = appPath + "/release"
+    def apkDebugPath = appPath + "/build/outputs/apk/debug"
+    def aabDebugPath = appPath + "/build/outputs/bundle/debug"
+
+    from apkDebugPath
+    from aabDebugPath
+    from releasePath
+
+    // generate path
+    def release
+    def type
+    if(propVersionCode.contains(".beta")) {
+        release = propVersionCode.split("\\.beta")[0].trim()
+        type = "beta/"
+    } else if(propVersionCode.contains(".alpha")) {
+        release = propVersionCode.split("\\.alpha")[0].trim()
+        type = "alpha/"
+    } else {
+        release = propVersionCode
+        type = ""
+    }
+
+    into "${projectDir}/data/releases/Version ${release}/${type}"
+}
