Update app to use CustomWidgets Github Package

--- a/schooltoolslib/build.gradle
+++ b/schooltoolslib/build.gradle
@@ -41,5 +41,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test:rules:1.2.0'
 
-    implementation project(path: ':customwidgets')
+    // own Libraries
+    implementation 'de.domjos:customwidgets:2.1'
 }
