--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Mar 30 16:51:15 CEST 2020
+#Wed Apr 15 11:41:10 CEST 2020
 ndk.dir=/home/domjos/.android-sdk/ndk-bundle
-sdk.dir=/home/domjos/Entwicklung/Java/Android/Sdk
+sdk.dir=C\:\\Users\\hae\\AppData\\Local\\Android\\Sdk
