--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,8 @@
  * along with UniTrackerMobile. If not, see <http://www.gnu.org/licenses/>.
  */
 
-ext.propVersion = 22
-ext.propVersionCode = "1.0"
+ext.propVersion = 23
+ext.propVersionCode = "1.1.alpha.1"
 
 ext.propJavaVersion = "8"
 
@@ -37,7 +37,7 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:4.0.1'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
