--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,8 +51,8 @@ dependencies {
     implementation "androidx.vectordrawable:vectordrawable:${propAndroidVersion}"
     implementation "androidx.preference:preference:${propAndroidVersion}"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'com.google.android.material:material:1.2.1'
 
     // library to select file in android filesystem
     implementation 'com.github.angads25:filepicker:1.1.1'
@@ -62,22 +62,22 @@ dependencies {
     implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'com.github.lookfirst:sardine:5.9'
     // library to show spotlight
-    implementation 'com.github.takusemba:spotlight:1.8.0'
+    implementation 'com.github.takusemba:spotlight:2.0.2'
 
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
-    implementation 'androidx.navigation:navigation-fragment:2.1.0'
-    implementation 'androidx.navigation:navigation-ui:2.1.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation 'androidx.navigation:navigation-fragment:2.3.0'
+    implementation 'androidx.navigation:navigation-ui:2.3.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
     // own Libraries
     implementation project(path: ':schooltoolslib')
-    implementation "de.domjos:customwidgets:${propCustomWidgetsVersion}"
+    implementation "de.domjos.customwidgets:customwidgets:${propCustomWidgetsVersion}"
 
     // Test-Libraries
     testImplementation "junit:junit:${propJUnitVersion}"
     androidTestImplementation "androidx.test.espresso:espresso-core:${propEspressoVersion}"
     androidTestImplementation "androidx.test.espresso:espresso-intents:${propEspressoVersion}"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:${propEspressoVersion}"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test:rules:1.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test:rules:1.3.0'
 }
