--- a/schooltoolslib/build.gradle
+++ b/schooltoolslib/build.gradle
@@ -38,9 +38,9 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:${propEspressoVersion}"
     androidTestImplementation "androidx.test.espresso:espresso-intents:${propEspressoVersion}"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:${propEspressoVersion}"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test:rules:1.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test:rules:1.3.0'
 
     // own Libraries
-    implementation "de.domjos:customwidgets:${propCustomWidgetsVersion}"
+    implementation "de.domjos.customwidgets:customwidgets:${propCustomWidgetsVersion}"
 }
