--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@
  * of the License, or (at your option) any later version.
  */
 
-ext.propVersion = 25
-ext.propVersionCode = "1.2.alpha.1"
+ext.propVersion = 26
+ext.propVersionCode = "1.2"
 
 ext.propJavaVersion = "8"
 
